--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,5 +29,12 @@
         ]
       }
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-12-09T14:48:34.527Z"
+    }
   }
 }
