--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -35,6 +35,10 @@
       "service": "amplifyhosting",
       "type": "cicd",
       "lastPushTimeStamp": "2022-12-09T14:48:34.527Z"
+    },
+    "S3AndCloudFront": {
+      "service": "S3AndCloudFront",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
